language/move-prover/tests/sources/functional/resources.exp
Move prover returns: exiting with boogie verification errors
error: post-condition does not hold
   ┌─ tests/sources/functional/resources.move:40:6
   │
40 │      ensures exists<R>(Signer::spec_address_of(account));
   │      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/resources.move:33: create_resource_incorrect
   =         account = <redacted>
   =     at tests/sources/functional/resources.move:34: create_resource_incorrect
   =     at tests/sources/functional/resources.move:37: create_resource_incorrect
   =     at tests/sources/functional/resources.move:39
   =     at tests/sources/functional/resources.move:40
